src/chrome/browser/browser.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

@import url("chrome://global/skin/");
@import url("chrome://browser/skin/devtools/browser.css");

@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
@namespace html url("http://www.w3.org/1999/xhtml");

:root {
  --toolbar-custom-color: #CCCCDD;
  --toolbar-highlight-top: rgba(255,255,255,.5);
  --toolbar-highlight-bottom: transparent;

  --toolbarbutton-background-color: hsla(210,32%,93%,.3);
  --toolbarbutton-border-color: hsla(210,54%,20%,.2);

  --toolbarbutton-image: url("chrome://browser/skin/Toolbar.png");
  --toolbarbutton-inverted-image: url("chrome://browser/skin/Toolbar.png");
  --toolbarbutton-large-image: url("chrome://browser/skin/Toolbar-large.png");
  --toolbarbutton-large-inverted-image: url("chrome://browser/skin/Toolbar-large.png");

  --tab-border-radius: 0px;
  --tab-selected-highlight: rgba(255,255,255,.7);

  --window-text-color: currentColor;
}

:root:-moz-lwtheme-brighttext {
  --toolbar-highlight-top: rgba(32,32,32,.8);
  --toolbar-highlight-bottom: rgba(32,32,32,0);
}

:root:-moz-lwtheme-darktext {
  --toolbar-highlight-top: rgba(255,255,255,.8);
  --tab-selected-highlight: rgba(255,255,255,.6);
}

#menubar-items {
  -moz-box-orient: vertical; /* for flex hack */
}

#main-menubar {
  -moz-box-flex: 1; /* make menu items expand to fill toolbar height */
}

#navigator-toolbox {
  -moz-appearance: none;
  background-color: transparent;
}

#navigator-toolbox:-moz-lwtheme {
  box-shadow: inset 0 -1px 0 0 #6A6A6A;
  padding-bottom: 1px;
}

#navigator-toolbox[tabsontop=false]::after,
#main-window[disablechrome] #navigator-toolbox::after {
  visibility: collapse;
}

#navigator-toolbox > toolbar:not(:-moz-lwtheme) {
  -moz-appearance: none;
  background-color: #CCCCDD;
}

@media not all and (-moz-windows-compositor) {
  #main-window[tabsintitlebar] #titlebar:-moz-lwtheme {
    visibility: hidden;
  }
  #main-window[tabsintitlebar] #titlebar-content:-moz-lwtheme {
    -moz-binding: url("chrome://global/content/bindings/general.xml#windowdragbox");
    visibility: visible;
  }
}

#personal-bookmarks {
  min-height: 24px;
}

#browser-bottombox:not(:-moz-lwtheme),
#print-preview-toolbar:not(:-moz-lwtheme) {
  background-color: #CCCCDD;
}

/* ::::: app menu button ::::: */

#appmenu-button {
  -moz-appearance: none;
  background-clip: padding-box;
  border: 1px solid #6A6A6A;
  border-top: none;
  color: #fff;
  font-weight: bold;
  padding: 0 1.5em .05em;
  margin: 1px 1px 2px;
  box-shadow: inset 0px 0px 0px 1px #ECECEC;
}

@media (-moz-windows-classic) {
  #appmenu-button {
    margin-bottom: 1px;
  }
}

/* app menu button - regular */

#appmenu-button {
  background: rgb(10,98,215);
}

#appmenu-button:hover:not(:active):not([open]) {
  background: rgb(69,170,246);
}

#appmenu-button:hover:active,
#appmenu-button[open] {
  background: rgb(0,74,209);
}

/* app menu button - private browsing mode */

#main-window[privatebrowsingmode=temporary] #appmenu-button {
  background: rgb(105,19,163);
}

#main-window[privatebrowsingmode=temporary] #appmenu-button:hover:not(:active):not([open]) {
  background: rgb(144,20,207);
}

#main-window[privatebrowsingmode=temporary] #appmenu-button:hover:active,
#main-window[privatebrowsingmode=temporary] #appmenu-button[open] {
  background: rgb(95,0,158);
}

#appmenu-button > .button-box {
  border-style: none;
  padding: 0;
}

#appmenu-button > .button-box > .button-menu-dropmarker {
  list-style-image: url(appmenu-dropmarker.png);
  filter: invert(100%);
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  margin-inline-start: .5em;
}

.splitmenu-menuitem {
  margin-inline-end: 1px;
  padding-inline-end: 0.5em;
}

.splitmenu-menu {
  -moz-box-pack: end;
}

.appmenu-edit-button {
  -moz-appearance: none;
  border: 1px solid transparent;
  padding: 2px;
  background: transparent;
  border-radius: 3px;
}

.appmenu-edit-button[disabled="true"] {
  opacity: .3;
}

#appmenuPrimaryPane {
  -moz-border-end: 1px solid #6A6A6A;
}

#appmenuSecondaryPane-spacer {
  min-height: 1em;
}

#appmenu-editmenu {
  -moz-box-pack: end;
}


#appmenu_print,
#appmenu_print_popup,
.appmenu-edit-button,
#appmenu-editmenu-cut,
#appmenu-editmenu-copy,
#appmenu-editmenu-paste,
#appmenu-quit {
  list-style-image: url("appmenu-icons.png");
}

#appmenu-cut,
#appmenu-editmenu-cut {
  -moz-image-region: rect(0 16px 16px 0);
}

#appmenu-copy,
#appmenu-editmenu-copy {
  -moz-image-region: rect(0 32px 16px 16px);
}

#appmenu-paste,
#appmenu-editmenu-paste {
  -moz-image-region: rect(0 48px 16px 32px);
}

#appmenu_print,
#appmenu_print_popup {
  -moz-image-region: rect(0 64px 16px 48px);
}

#appmenu-quit {
  -moz-image-region: rect(0 80px 16px 64px);
}

#appmenu-edit-label {
  -moz-appearance: none;
  background: transparent;
  font-style: italic;
}

#appmenu_bookmarks {
  list-style-image: url("chrome://browser/skin/places/bookmark.png");
  -moz-image-region: rect(0px 48px 16px 32px);
}

#appmenu_privateBrowsing,
#appmenu_newPrivateWindow {
  list-style-image: url("chrome://browser/skin/Privacy-16.png");
}

@media (min-resolution: 1.25dppx) {
  #appmenu_privateBrowsing,
  #appmenu_newPrivateWindow {
    list-style-image: url("chrome://browser/skin/Privacy-32.png");
  }
}

#appmenu_addons {
  list-style-image: url("chrome://mozapps/skin/extensions/extensionGeneric-16.png");
}

@media (min-resolution: 1.25dppx) {
  #appmenu_addons {
    list-style-image: url("chrome://mozapps/skin/extensions/extensionGeneric.png");
  }
}

#appmenu_showAllBookmarks,
#bookmarksShowAll,
#BMB_bookmarksShowAll {
  list-style-image: url("chrome://browser/skin/places/allBookmarks.png");
}
/* ... */

